add functionality to control the mower (start, stop, configure mow after rain or working time)
