# ext/api/worx/openapi.yml
@@ -1,4 +1,4 @@
-openapi: 3.0.0
+openapi: 3.0.3
 info:
   version: 1.0.0
   title: Worx Landroid API
@@ -25,8 +25,32 @@ paths:
           description: Unauthorized
         "404":
           description: Status not found - Mower dead or out of wifi coverage area
+    post:
+      tags:
+        - landroid
+      summary: Post configuration change payload
+      operationId: postPayload
+      requestBody:
+        required: true
+        content:
+          text/plain:
+            schema:
+              type: string
+              description: Urlencoded data to send to the mower
+              example: 'data=%5B%5B%22rit_pioggia%22%2C0%2C12%5D%5D'
+      responses:
+        "200":
+          description: New configuration
+          content:
+            text/html:
+              schema:
+                $ref: "#/components/schemas/CurrentStatus"
+        "401":
+          description: Unauthorized
+        "404":
+          description: Status not found - Mower dead or out of wifi coverage area
 servers:
-  - url: http://192.168.1.171/
+  - url: http://192.168.1.173/
 components:
   securitySchemes:
     basicAuth:
