# src/main/java/ee/codehouse/worxbetter/agent/service/feign/mower/CustomLandroidApi.java
@@ -1,0 +1,37 @@
+/**
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech) (6.0.1).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+package ee.codehouse.worxbetter.agent.service.feign.mower;
+
+import ee.codehouse.worxbetter.landroid.client.api.LandroidApi;
+import ee.codehouse.worxbetter.landroid.client.model.CurrentStatus;
+import io.swagger.v3.oas.annotations.Parameter;
+import io.swagger.v3.oas.annotations.tags.Tag;
+import org.springframework.http.ResponseEntity;
+import org.springframework.validation.annotation.Validated;
+import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.RequestBody;
+
+import javax.validation.Valid;
+
+@Validated
+@Tag(name = "Landroid", description = "the Landroid API")
+public interface CustomLandroidApi extends LandroidApi {
+    /**
+     * I was unable to create an openapi spec so that it would correctly take the input in the body but consume application/x-www-form-urlencoded. This is the reason for this override
+     * @param body  (required)
+     * @return CurrentStatus after the configuration change is applied
+     */
+    @Override
+    @PostMapping(
+        value = "/jsondata.cgi",
+        produces = { "text/html" },
+        consumes = { "application/x-www-form-urlencoded" }
+    )
+    ResponseEntity<CurrentStatus> postPayload(
+        @Parameter(name = "body", description = "configuration value", required = true) @Valid @RequestBody String body
+    );
+
+}
